[gd_scene load_steps=63 format=3 uid="uid://cmd8b6xjbdu11"]

[ext_resource type="Texture2D" uid="uid://t563nnwsoyc2" path="res://recursos/Sprites/14-TileSets/Terrain (32x32).png" id="1_747u7"]
[ext_resource type="Script" path="res://menu/main_menu.gd" id="1_kfnbw"]
[ext_resource type="Texture2D" uid="uid://bknejanje8aqp" path="res://recursos/Sprites/14-TileSets/Decorations (32x32).png" id="2_177g6"]
[ext_resource type="Texture2D" uid="uid://7kvradxsvr2a" path="res://recursos/Sprites/Kings and Pigs.png" id="2_ggqt4"]
[ext_resource type="Theme" uid="uid://bkqxuyfu6ktl6" path="res://menu/BTNtHEME.tres" id="3_2x2hp"]
[ext_resource type="FontFile" uid="uid://bpan66kger4xm" path="res://recursos/Localization/upheavtt.ttf" id="3_06odn"]
[ext_resource type="Texture2D" uid="uid://dmqm4wcqi3s7" path="res://recursos/Sprites/01-King Human/Idle (78x58).png" id="6_fxrm5"]
[ext_resource type="Texture2D" uid="uid://can880l10qsxv" path="res://recursos/Sprites/02-King Pig/Idle (38x28).png" id="7_ro0ru"]
[ext_resource type="Texture2D" uid="uid://c1xmxgg13c3d" path="res://recursos/Sprites/03-Pig/Idle (34x28).png" id="8_3jm32"]
[ext_resource type="Texture2D" uid="uid://qyw4o7uqkop" path="res://recursos/Sprites/05-Pig Thowing a Bomb/Idle (26x26).png" id="9_ckubh"]
[ext_resource type="Texture2D" uid="uid://bixmmujpp2378" path="res://recursos/Sprites/Dialogbox_forNineSlice.png" id="11_eplt4"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bu613"]
texture = ExtResource("1_747u7")
texture_region_size = Vector2i(32, 32)
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
7:1/0 = 0
8:1/0 = 0
10:1/0 = 0
11:1/0 = 0
13:1/0 = 0
14:1/0 = 0
16:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
7:2/0 = 0
8:2/0 = 0
10:2/0 = 0
11:2/0 = 0
13:2/0 = 0
14:2/0 = 0
16:2/0 = 0
17:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0
7:4/0 = 0
8:4/0 = 0
10:4/0 = 0
11:4/0 = 0
13:4/0 = 0
14:4/0 = 0
16:4/0 = 0
17:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
5:5/0 = 0
7:5/0 = 0
8:5/0 = 0
10:5/0 = 0
11:5/0 = 0
13:5/0 = 0
14:5/0 = 0
16:5/0 = 0
17:5/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
5:7/0 = 0
7:7/0 = 0
8:7/0 = 0
10:7/0 = 0
11:7/0 = 0
13:7/0 = 0
14:7/0 = 0
16:7/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
5:8/0 = 0
7:8/0 = 0
8:8/0 = 0
10:8/0 = 0
11:8/0 = 0
13:8/0 = 0
14:8/0 = 0
16:8/0 = 0
17:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
5:9/0 = 0
7:10/0 = 0
8:10/0 = 0
10:10/0 = 0
11:10/0 = 0
13:10/0 = 0
14:10/0 = 0
16:10/0 = 0
17:10/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
5:11/0 = 0
7:11/0 = 0
8:11/0 = 0
10:11/0 = 0
11:11/0 = 0
13:11/0 = 0
14:11/0 = 0
16:11/0 = 0
17:11/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7jfqf"]
texture = ExtResource("2_177g6")
texture_region_size = Vector2i(32, 32)
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0

[sub_resource type="TileSet" id="TileSet_q6jmn"]
tile_size = Vector2i(32, 32)
sources/1 = SubResource("TileSetAtlasSource_bu613")
sources/2 = SubResource("TileSetAtlasSource_7jfqf")

[sub_resource type="AtlasTexture" id="AtlasTexture_8pexh"]
atlas = ExtResource("6_fxrm5")
region = Rect2(0, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_lujg7"]
atlas = ExtResource("6_fxrm5")
region = Rect2(78, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_nm8iq"]
atlas = ExtResource("6_fxrm5")
region = Rect2(156, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhv6h"]
atlas = ExtResource("6_fxrm5")
region = Rect2(234, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_sd5ki"]
atlas = ExtResource("6_fxrm5")
region = Rect2(312, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_5f3yn"]
atlas = ExtResource("6_fxrm5")
region = Rect2(390, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_3k78x"]
atlas = ExtResource("6_fxrm5")
region = Rect2(468, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nyi3"]
atlas = ExtResource("6_fxrm5")
region = Rect2(546, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5ne5"]
atlas = ExtResource("6_fxrm5")
region = Rect2(624, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxby8"]
atlas = ExtResource("6_fxrm5")
region = Rect2(702, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_tftbg"]
atlas = ExtResource("6_fxrm5")
region = Rect2(780, 0, 78, 58)

[sub_resource type="SpriteFrames" id="SpriteFrames_8xpwn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pexh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lujg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nm8iq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhv6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sd5ki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5f3yn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3k78x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nyi3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5ne5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxby8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tftbg")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_mnnnm"]
atlas = ExtResource("7_ro0ru")
region = Rect2(0, 0, 38, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktng2"]
atlas = ExtResource("7_ro0ru")
region = Rect2(38, 0, 38, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rkxp"]
atlas = ExtResource("7_ro0ru")
region = Rect2(76, 0, 38, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_hipea"]
atlas = ExtResource("7_ro0ru")
region = Rect2(114, 0, 38, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fiql"]
atlas = ExtResource("7_ro0ru")
region = Rect2(152, 0, 38, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8obn"]
atlas = ExtResource("7_ro0ru")
region = Rect2(190, 0, 38, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4rb2"]
atlas = ExtResource("7_ro0ru")
region = Rect2(228, 0, 38, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfm35"]
atlas = ExtResource("7_ro0ru")
region = Rect2(266, 0, 38, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_xp54f"]
atlas = ExtResource("7_ro0ru")
region = Rect2(304, 0, 38, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_p38cu"]
atlas = ExtResource("7_ro0ru")
region = Rect2(342, 0, 38, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yofg"]
atlas = ExtResource("7_ro0ru")
region = Rect2(380, 0, 38, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1ps1"]
atlas = ExtResource("7_ro0ru")
region = Rect2(418, 0, 38, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_ttn3g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnnnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktng2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rkxp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hipea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fiql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8obn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4rb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfm35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xp54f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p38cu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yofg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1ps1")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_4n0du"]
atlas = ExtResource("8_3jm32")
region = Rect2(0, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdtls"]
atlas = ExtResource("8_3jm32")
region = Rect2(34, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsvdv"]
atlas = ExtResource("8_3jm32")
region = Rect2(68, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_q651y"]
atlas = ExtResource("8_3jm32")
region = Rect2(102, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_bq2uk"]
atlas = ExtResource("8_3jm32")
region = Rect2(136, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_byj2k"]
atlas = ExtResource("8_3jm32")
region = Rect2(170, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_7eo14"]
atlas = ExtResource("8_3jm32")
region = Rect2(204, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahsdw"]
atlas = ExtResource("8_3jm32")
region = Rect2(238, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8rg1"]
atlas = ExtResource("8_3jm32")
region = Rect2(272, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_4h68d"]
atlas = ExtResource("8_3jm32")
region = Rect2(306, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_bt7yu"]
atlas = ExtResource("8_3jm32")
region = Rect2(340, 0, 34, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_i2ol4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4n0du")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdtls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsvdv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q651y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bq2uk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_byj2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7eo14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahsdw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8rg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4h68d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bt7yu")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_4bv1g"]
atlas = ExtResource("9_ckubh")
region = Rect2(0, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxp8i"]
atlas = ExtResource("9_ckubh")
region = Rect2(26, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_lh8tc"]
atlas = ExtResource("9_ckubh")
region = Rect2(52, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_axhkr"]
atlas = ExtResource("9_ckubh")
region = Rect2(78, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvmi4"]
atlas = ExtResource("9_ckubh")
region = Rect2(104, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_vx5pk"]
atlas = ExtResource("9_ckubh")
region = Rect2(130, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_avbxg"]
atlas = ExtResource("9_ckubh")
region = Rect2(156, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_1hcju"]
atlas = ExtResource("9_ckubh")
region = Rect2(182, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_30gay"]
atlas = ExtResource("9_ckubh")
region = Rect2(208, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_djwrt"]
atlas = ExtResource("9_ckubh")
region = Rect2(234, 0, 26, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_sgnpl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bv1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxp8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lh8tc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axhkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvmi4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vx5pk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avbxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1hcju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30gay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djwrt")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kfnbw")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_q6jmn")
format = 2
layer_0/name = "back"
layer_0/tile_data = PackedInt32Array(0, 458753, 1, 1, 131073, 3, 2, 131073, 3, 3, 131073, 3, 4, 131073, 3, 5, 131073, 3, 6, 131073, 3, 7, 131073, 3, 8, 131073, 3, 9, 131073, 3, 10, 131073, 3, 11, 131073, 3, 12, 131073, 3, 13, 131073, 3, 14, 131073, 3, 15, 131073, 3, 16, 131073, 3, 17, 131073, 3, 18, 131073, 3, 19, 524289, 1, 65555, 65537, 2, 131091, 65537, 2, 196627, 65537, 2, 262163, 65537, 2, 327699, 65537, 2, 393235, 65537, 2, 458771, 65537, 2, 524307, 65537, 2, 589843, 65537, 2, 655379, 65537, 2, 720915, 65537, 2, 786451, 65537, 2, 851987, 65537, 2, 917522, 131073, 1, 917521, 131073, 1, 917520, 131073, 1, 917519, 131073, 1, 917518, 131073, 1, 917517, 131073, 1, 917516, 131073, 1, 917515, 131073, 1, 917514, 131073, 1, 917513, 131073, 1, 917512, 131073, 1, 917511, 131073, 1, 917510, 131073, 1, 917509, 131073, 1, 917508, 131073, 1, 917507, 131073, 1, 917506, 131073, 1, 917505, 131073, 1, 851968, 196609, 2, 786432, 196609, 2, 720896, 196609, 2, 655360, 196609, 2, 589824, 196609, 2, 524288, 196609, 2, 458752, 196609, 2, 393216, 196609, 2, 327680, 196609, 2, 262144, 196609, 2, 196608, 196609, 2, 131072, 196609, 2, 65536, 196609, 2, 917504, 458753, 2, 917523, 524289, 2, 65537, 65537, 7, 65538, 131073, 7, 65539, 131073, 7, 65540, 131073, 7, 65541, 131073, 7, 65542, 131073, 7, 65543, 131073, 7, 65544, 131073, 7, 65545, 131073, 7, 65546, 131073, 7, 65547, 131073, 7, 65548, 131073, 7, 65549, 131073, 7, 65550, 131073, 7, 65551, 131073, 7, 65552, 131073, 7, 65553, 131073, 7, 65554, 196609, 7, 131090, 196609, 8, 196626, 196609, 8, 262162, 196609, 8, 327698, 196609, 8, 393234, 196609, 8, 458770, 196609, 8, 524306, 196609, 8, 589842, 196609, 8, 655378, 196609, 8, 720914, 196609, 8, 786450, 196609, 8, 851986, 196609, 9, 851985, 131073, 9, 851984, 131073, 9, 851983, 131073, 9, 851982, 131073, 9, 851981, 131073, 9, 851980, 131073, 9, 851979, 131073, 9, 851978, 131073, 9, 851977, 131073, 9, 851976, 131073, 9, 851975, 131073, 9, 851974, 131073, 9, 851973, 131073, 9, 851972, 131073, 9, 851971, 131073, 9, 851970, 131073, 9, 851969, 65537, 9, 786433, 65537, 8, 720897, 65537, 8, 655361, 65537, 8, 589825, 65537, 8, 524289, 65537, 8, 458753, 65537, 8, 393217, 65537, 8, 327681, 65537, 8, 262145, 65537, 8, 196609, 65537, 8, 131073, 65537, 8, 131074, 131073, 8, 196610, 131073, 8, 262146, 131073, 8, 327682, 131073, 8, 393218, 131073, 8, 458754, 131073, 8, 524290, 131073, 8, 589826, 131073, 8, 655362, 131073, 8, 720898, 131073, 8, 131075, 131073, 8, 196611, 131073, 8, 262147, 131073, 8, 327683, 131073, 8, 393219, 131073, 8, 458755, 131073, 8, 524291, 131073, 8, 589827, 131073, 8, 655363, 131073, 8, 720899, 131073, 8, 131076, 131073, 8, 196612, 131073, 8, 262148, 131073, 8, 327684, 131073, 8, 393220, 131073, 8, 458756, 131073, 8, 524292, 131073, 8, 589828, 131073, 8, 655364, 131073, 8, 720900, 131073, 8, 131077, 131073, 8, 196613, 131073, 8, 262149, 131073, 8, 327685, 131073, 8, 393221, 131073, 8, 458757, 131073, 8, 524293, 131073, 8, 589829, 131073, 8, 655365, 131073, 8, 720901, 131073, 8, 131078, 131073, 8, 196614, 131073, 8, 262150, 131073, 8, 327686, 131073, 8, 393222, 131073, 8, 458758, 131073, 8, 524294, 131073, 8, 589830, 131073, 8, 655366, 131073, 8, 720902, 131073, 8, 131079, 131073, 8, 196615, 131073, 8, 262151, 131073, 8, 327687, 131073, 8, 393223, 131073, 8, 458759, 131073, 8, 524295, 131073, 8, 589831, 131073, 8, 655367, 131073, 8, 720903, 131073, 8, 131080, 131073, 8, 196616, 131073, 8, 262152, 131073, 8, 327688, 131073, 8, 393224, 131073, 8, 458760, 131073, 8, 524296, 131073, 8, 589832, 131073, 8, 655368, 131073, 8, 720904, 131073, 8, 131081, 131073, 8, 196617, 131073, 8, 262153, 131073, 8, 327689, 131073, 8, 393225, 131073, 8, 458761, 131073, 8, 524297, 131073, 8, 589833, 131073, 8, 655369, 131073, 8, 720905, 131073, 8, 131082, 131073, 8, 196618, 131073, 8, 262154, 131073, 8, 327690, 131073, 8, 393226, 131073, 8, 458762, 131073, 8, 524298, 131073, 8, 589834, 131073, 8, 655370, 131073, 8, 720906, 131073, 8, 131083, 131073, 8, 196619, 131073, 8, 262155, 131073, 8, 327691, 131073, 8, 393227, 131073, 8, 458763, 131073, 8, 524299, 131073, 8, 589835, 131073, 8, 655371, 131073, 8, 720907, 131073, 8, 786434, 131073, 8, 786435, 131073, 8, 786436, 131073, 8, 786437, 131073, 8, 786438, 131073, 8, 786439, 131073, 8, 786440, 131073, 8, 786441, 131073, 8, 786442, 131073, 8, 786443, 131073, 8, 131084, 131073, 8, 196620, 131073, 8, 262156, 131073, 8, 327692, 131073, 8, 393228, 131073, 8, 458764, 131073, 8, 524300, 131073, 8, 589836, 131073, 8, 655372, 131073, 8, 720908, 131073, 8, 786444, 131073, 8, 131085, 131073, 8, 196621, 131073, 8, 262157, 131073, 8, 327693, 131073, 8, 393229, 131073, 8, 458765, 131073, 8, 524301, 131073, 8, 589837, 131073, 8, 655373, 131073, 8, 720909, 131073, 8, 786445, 131073, 8, 131086, 131073, 8, 196622, 131073, 8, 262158, 131073, 8, 327694, 131073, 8, 393230, 131073, 8, 458766, 131073, 8, 524302, 131073, 8, 589838, 131073, 8, 655374, 131073, 8, 720910, 131073, 8, 786446, 131073, 8, 131087, 131073, 8, 196623, 131073, 8, 262159, 131073, 8, 327695, 131073, 8, 393231, 131073, 8, 458767, 131073, 8, 524303, 131073, 8, 589839, 131073, 8, 655375, 131073, 8, 720911, 131073, 8, 786447, 131073, 8, 131088, 131073, 8, 196624, 131073, 8, 262160, 131073, 8, 327696, 131073, 8, 393232, 131073, 8, 458768, 131073, 8, 524304, 131073, 8, 589840, 131073, 8, 655376, 131073, 8, 720912, 131073, 8, 786448, 131073, 8, 131089, 131073, 8, 196625, 131073, 8, 262161, 131073, 8, 327697, 131073, 8, 393233, 131073, 8, 458769, 131073, 8, 524305, 131073, 8, 589841, 131073, 8, 655377, 131073, 8, 720913, 131073, 8, 786449, 131073, 8)
layer_1/name = "decor"
layer_1/tile_data = PackedInt32Array(196612, 131074, 3, 262148, 131074, 4, 196613, 196610, 3, 262149, 196610, 4, 196623, 262146, 3, 262159, 262146, 4, 196624, 327682, 3, 262160, 327682, 4, 327682, 65538, 1, 393218, 65538, 2, 458754, 65538, 3, 327697, 65538, 1, 393233, 65538, 2, 458769, 65538, 4, 458757, 65538, 1, 524293, 65538, 2, 589829, 65538, 4, 458766, 65538, 1, 524302, 65538, 2, 589838, 65538, 3)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(114, 418)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_8xpwn")
autoplay = "default"

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
position = Vector2(569, 420)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_ttn3g")
autoplay = "default"

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="."]
position = Vector2(466, 421)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_i2ol4")
autoplay = "default"

[node name="AnimatedSprite2D4" type="AnimatedSprite2D" parent="."]
position = Vector2(523, 423)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_sgnpl")
autoplay = "default"

[node name="MainMenu" type="Control" parent="."]
anchors_preset = 0
offset_left = 320.0
offset_top = 240.0
offset_right = 320.0
offset_bottom = 240.0

[node name="TextureRect" type="TextureRect" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -82.0
offset_right = 67.0
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
pivot_offset = Vector2(67, 7)
texture = ExtResource("2_ggqt4")
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.5
offset_top = -184.0
offset_right = 70.5
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 200

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="btnStart" type="Button" parent="MainMenu/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_2x2hp")
theme_override_fonts/font = ExtResource("3_06odn")
theme_override_font_sizes/font_size = 32
text = "START"

[node name="btnOptions" type="Button" parent="MainMenu/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_2x2hp")
theme_override_fonts/font = ExtResource("3_06odn")
theme_override_font_sizes/font_size = 32
text = "OPTIONS"

[node name="btnCredits" type="Button" parent="MainMenu/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_2x2hp")
theme_override_fonts/font = ExtResource("3_06odn")
theme_override_font_sizes/font_size = 32
text = "CREDITS"

[node name="btnQuit" type="Button" parent="MainMenu/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_2x2hp")
theme_override_fonts/font = ExtResource("3_06odn")
theme_override_font_sizes/font_size = 32
text = "QUIT"

[node name="OptionsMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0

[node name="CreditsScreen" type="Control" parent="."]
visible = false
anchors_preset = 0

[node name="MarginContainer" type="MarginContainer" parent="CreditsScreen"]
layout_mode = 0
offset_left = 62.0
offset_top = 65.0
offset_right = 575.0
offset_bottom = 384.0

[node name="HBoxContainer" type="HBoxContainer" parent="CreditsScreen/MarginContainer"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="CreditsScreen/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(512, 256)
layout_mode = 2
texture = ExtResource("11_eplt4")
region_rect = Rect2(2, 0, 92, 96)

[node name="CreditsTitle" type="Label" parent="CreditsScreen/MarginContainer/HBoxContainer/NinePatchRect"]
layout_mode = 2
offset_left = 158.0
offset_top = 21.0
offset_right = 354.0
offset_bottom = 50.0
theme = ExtResource("3_2x2hp")
text = "CREDITS"
horizontal_alignment = 1

[node name="btnCloseCredits" type="Button" parent="CreditsScreen/MarginContainer/HBoxContainer/NinePatchRect"]
layout_mode = 2
offset_left = 158.0
offset_top = 265.0
offset_right = 354.0
offset_bottom = 273.0
theme = ExtResource("3_2x2hp")
text = "BACK"

[node name="HBoxContainer" type="HBoxContainer" parent="CreditsScreen/MarginContainer/HBoxContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = -31.0
offset_right = 98.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CreditsScreen/MarginContainer/HBoxContainer/NinePatchRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Programmer" type="Label" parent="CreditsScreen/MarginContainer/HBoxContainer/NinePatchRect/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_2x2hp")
text = "PROGRAMMER"
horizontal_alignment = 1

[node name="Pixelart" type="Label" parent="CreditsScreen/MarginContainer/HBoxContainer/NinePatchRect/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_2x2hp")
text = "PIXELART"
horizontal_alignment = 1

[connection signal="pressed" from="MainMenu/MarginContainer/HBoxContainer/VBoxContainer/btnStart" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/HBoxContainer/VBoxContainer/btnOptions" to="." method="_on_btn_options_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/HBoxContainer/VBoxContainer/btnCredits" to="." method="_on_btn_credits_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/HBoxContainer/VBoxContainer/btnQuit" to="." method="_on_btn_quit_pressed"]
[connection signal="pressed" from="CreditsScreen/MarginContainer/HBoxContainer/NinePatchRect/btnCloseCredits" to="." method="_on_btn_close_credits_pressed"]
